--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <script src="js/mousetrap/mousetrap.min.js"></script>
         <script src="js/mousetrap/mousetrap-bind-dictionary.min.js"></script>
 
+        <!-- Game Entities -->
+        <script src="js/entities/bullets.js"></script>
+
         <script src="js/ticker.js"></script>
         <script src="js/game.js"></script>
 
