--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <!-- Game Entities -->
         <script src="js/entities/bullets.js"></script>
+        <script src="js/entities/bomb.js"></script>
 
         <script src="js/ticker.js"></script>
         <script src="js/game.js"></script>
