--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- Add your site or application content here -->
         
-        <canvas id="canvas" width="800" height="600"></canvas>
+        <canvas id="canvas" width="800" height="400"></canvas>
 
         <script src="js/mousetrap/mousetrap.min.js"></script>
         <script src="js/mousetrap/mousetrap-bind-dictionary.min.js"></script>
@@ -34,6 +34,7 @@
 
         <script src="js/ticker.js"></script>
         <script src="js/game.js"></script>
+        <script src="js/assets.js"></script>
 
         <script src="js/main.js"></script>
     </body>
